--- a/src/styles.css
+++ b/src/styles.css
@@ -58,7 +58,17 @@
   user-select: none; /* Standard syntax */
 }
 
-.wrapper {
+.navbar {
   display: flex;
   flex-direction: row;
+  margin-top: 2.1rem;
+  float: right;
+  margin-right: 4%;
+}
+
+.cheselogo {
+  float: left;
+  margin-left: 4%;
+  margin-top: 1rem;
+  width: 8rem;
 }
