--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,13 @@
 a {
   cursor: url(./assets/hand_cursor.png), pointer;
 }
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  flex: 2;
+}
