--- a/src/styles.css
+++ b/src/styles.css
@@ -79,7 +79,7 @@
 
 .moveArrow {
   position: relative;
-  bottom: -0.55rem;
+  bottom: -14.2em;
   animation-name: mymove;
   animation-iteration-count: 1;
   animation-direction: normal;
@@ -113,6 +113,7 @@
 
 .youtube:hover {
   opacity: 0.8;
+  animation: float 1.5s ease-in-out infinite;
 }
 
 .github {
@@ -121,6 +122,7 @@
 
 .github:hover {
   opacity: 0.8;
+  animation: float 1.5s ease-in-out infinite;
 }
 
 .inlinked {
@@ -128,5 +130,49 @@
 }
 
 .inlinked:hover {
+  opacity: 0.8;
+  animation: float 1.5s ease-in-out infinite;
+}
+
+.navitemslink {
+  text-decoration: none;
+  height: 0px;
+}
+
+@keyframes float {
+  0% {
+    filter: drop-shadow(0px 10px 4px #979797);
+    transform: translatey(0px);
+  }
+  50% {
+    filter: drop-shadow(0px 25px 8px #b1b1b1);
+    transform: translatey(-15px);
+  }
+  100% {
+    filter: drop-shadow(0px 10px 4px #979797);
+    transform: translatey(0px);
+  }
+}
+
+@keyframes float_msg {
+  0% {
+    filter: drop-shadow(0px 10px 4px #979797);
+    transform: translatey(0px);
+  }
+  50% {
+    filter: drop-shadow(0px 25px 8px #b1b1b1);
+    transform: translatey(-5px);
+  }
+  100% {
+    filter: drop-shadow(0px 10px 4px #979797);
+    transform: translatey(0px);
+  }
+}
+
+.mouse_msg {
+  animation: float_msg 1.5s ease-in-out infinite;
+}
+
+.mouse_msg:hover {
   opacity: 0.8;
 }
