Fixed mouse positioning.

--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,10 @@ a {
 
 .page-container {
   display: flex;
+}
+
+#stacked-col {
   flex-direction: column;
-  min-height: 100vh;
 }
 
 .content-wrap {
