--- a/src/styles.css
+++ b/src/styles.css
@@ -111,6 +111,7 @@
 
 .youtube:hover {
   opacity: 0.8;
+  animation-duration: 2s;
 }
 
 .github {
@@ -120,6 +121,7 @@
 
 .github:hover {
   opacity: 0.8;
+  animation-duration: 2s;
 }
 
 .inlinked {
@@ -129,6 +131,7 @@
 
 .inlinked:hover {
   opacity: 0.8;
+  animation-duration: 2s;
 }
 
 .navitemslink {
@@ -243,7 +246,95 @@
 
 .container {
   margin: 150px auto;
+  margin-top: 5rem;
   width: 60%;
   display: flex;
   flex-direction: row;
+}
+
+.beautiful {
+  filter: drop-shadow(0px 0px 2px #635c1b);
+}
+
+@keyframes mnfloat {
+  0% {
+    filter: drop-shadow(0px 10px 4px #979797);
+    transform: translatey(0px);
+  }
+  50% {
+    filter: drop-shadow(0px 25px 8px #b1b1b1);
+    transform: translatey(-12px);
+  }
+  100% {
+    filter: drop-shadow(0px 10px 4px #979797);
+    transform: translatey(0px);
+  }
+}
+
+@keyframes mnrotate {
+  0% {
+    transform: rotate(0deg);
+    filter: drop-shadow(0px 10px 4px #979797);
+  }
+  10% {
+    filter: drop-shadow(0px 5px 4px #979797);
+  }
+  20% {
+    filter: drop-shadow(0px 0px 4px #979797);
+  }
+  30% {
+    filter: drop-shadow(0px -5px 4px #979797);
+  }
+  40% {
+    filter: drop-shadow(0px -10px 4px #979797);
+  }
+  50% {
+    filter: drop-shadow(0px -10px 4px #979797);
+  }
+  60% {
+    filter: drop-shadow(0px -10px 4px #979797);
+  }
+  70% {
+    filter: drop-shadow(0px -5px 4px #979797);
+  }
+  80% {
+    filter: drop-shadow(0px 0px 4px #979797);
+  }
+  90% {
+    filter: drop-shadow(0px 5px 4px #979797);
+  }
+  100% {
+    transform: rotate(360deg);
+    filter: drop-shadow(0px 10px 4px #979797);
+  }
+}
+
+.moneris {
+  width: 10rem;
+  animation: mnfloat 1.5s ease-in-out infinite;
+}
+
+.moneris:hover {
+  opacity: 0.8;
+
+  animation: mnrotate 1.5s linear infinite;
+}
+
+.scrollbar::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.scrollbar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+.scrollbar::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
