--- a/src/styles.css
+++ b/src/styles.css
@@ -88,7 +88,7 @@
     transform: translateX(0vw);
   }
   to {
-    transform: translateX(calc(100vw - 118px));
+    transform: translateX(calc(100vw - 130px));
   }
 }
 
@@ -218,7 +218,7 @@
 }
 
 .mouse_msg {
-  animation: float_msg 1.5s ease-in-out infinite;
+  animation: float_msg 1.5s ease-in-out infinite, msgappear 1s ease-in-out 1;
 }
 
 .mouse_msg:hover {
@@ -237,11 +237,10 @@
 
 .text-stuff {
   text-align: right;
-  float: right;
 }
 
 .pic-stuff {
-  float: right;
+  float: left;
 }
 
 .container {
@@ -249,7 +248,6 @@
   margin-top: 5rem;
   width: 60%;
   display: flex;
-  flex-direction: row;
 }
 
 .beautiful {
@@ -320,21 +318,77 @@
   animation: mnrotate 1.5s linear infinite;
 }
 
-.scrollbar::-webkit-scrollbar {
+.wrapper::-webkit-scrollbar {
   width: 10px;
 }
 
 /* Track */
-.scrollbar::-webkit-scrollbar-track {
-  background: #f1f1f1;
+.wrapper::-webkit-scrollbar-track {
+  background: none;
 }
 
 /* Handle */
-.scrollbar::-webkit-scrollbar-thumb {
-  background: #888;
+.wrapper::-webkit-scrollbar-thumb {
+  background: url("https://i.ibb.co/pxCGDRv/scrollbar.png");
 }
 
 /* Handle on hover */
-.scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #555;
+.wrapper::-webkit-scrollbar-thumb:hover {
+  opacity: 80%;
+}
+
+.wrapper {
+  /* min-height: 100%; */
+  height: calc(100vh - 194px);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  visibility: hidden;
+}
+
+.main-content,
+.wrapper:hover,
+.wrapper:focus {
+  visibility: visible;
+}
+
+.wrapper:hover {
+  overflow-y: auto;
+}
+
+.main-content {
+  margin-top: 70px;
+  flex: 0 0 auto;
+}
+
+.scrollbox_delayed {
+  transition: visibility 0.2s;
+}
+
+.scrollbox_delayed:hover {
+  transition: visibility 0s 0.2s;
+}
+
+@keyframes arrowfloat {
+  0% {
+    filter: drop-shadow(0px 0px 4px #b3b3b3);
+    transform: translatey(0px);
+  }
+  50% {
+    filter: drop-shadow(0px 0px 6px #888888);
+    transform: translatey(-6px);
+  }
+  100% {
+    filter: drop-shadow(0px 0px 4px #b3b3b3);
+    transform: translatey(0px);
+  }
+}
+
+.arrowfloat {
+  animation: arrowfloat 1s ease-in-out infinite;
+}
+
+.arrowfloat:hover {
+  opacity: 0.8;
 }
