Updated "work" page.

--- a/src/styles.css
+++ b/src/styles.css
@@ -314,6 +314,16 @@
 
 .moneris:hover {
   opacity: 0.8;
+  animation: mnrotate 1.5s linear infinite;
+}
+
+.batmobile {
+  width: 20rem;
+  animation: mnfloat 1.5s ease-in-out infinite;
+}
+
+.batmobile:hover {
+  opacity: 0.8;
 
   animation: mnrotate 1.5s linear infinite;
 }
