--- a/src/styles.css
+++ b/src/styles.css
@@ -124,6 +124,17 @@
   animation-duration: 2s;
 }
 
+.mail {
+  width: 9rem;
+  margin-bottom: 1.5rem;
+  animation: mailfloat 1.5s ease-in-out infinite;
+}
+
+.mail:hover {
+  opacity: 0.8;
+  animation-duration: 2s;
+}
+
 .inlinked {
   width: 9rem;
   animation: ilfloat 1.3s ease-in-out infinite;
@@ -137,6 +148,21 @@
 .navitemslink {
   text-decoration: none;
   height: 0px;
+}
+
+@keyframes mailfloat {
+  0% {
+    filter: drop-shadow(0px 10px 4px #979797);
+    transform: translatey(px);
+  }
+  50% {
+    filter: drop-shadow(0px 25px 8px #b1b1b1);
+    transform: translatey(-12px);
+  }
+  100% {
+    filter: drop-shadow(0px 10px 4px #979797);
+    transform: translatey(0px);
+  }
 }
 
 @keyframes ytfloat {
