Fixed dimensions and transition bug.

--- a/src/styles.css
+++ b/src/styles.css
@@ -124,6 +124,16 @@
   animation-duration: 2s;
 }
 
+.gmail {
+  width: 9rem;
+  animation: ghfloat 1.4s ease-in-out infinite;
+}
+
+.gmail:hover {
+  opacity: 0.8;
+  animation-duration: 2s;
+}
+
 .mail {
   width: 9rem;
   margin-bottom: 1.5rem;
@@ -145,7 +155,32 @@
   animation-duration: 2s;
 }
 
-.navitemslink {
+.inlinked-contact {
+  width: 9rem;
+  animation: ilfloat 1.3s ease-in-out infinite;
+}
+
+.inlinked-contact:hover {
+  opacity: 0.8;
+  animation-duration: 2s;
+}
+
+.navitemshome {
+  text-decoration: none;
+  height: 0px;
+}
+
+.navitemswork {
+  text-decoration: none;
+  height: 0px;
+}
+
+.navitemsexp {
+  text-decoration: none;
+  height: 0px;
+}
+
+.navitemscon {
   text-decoration: none;
   height: 0px;
 }
@@ -244,6 +279,10 @@
 }
 
 .mouse_msg {
+  width: 15rem;
+  position: fixed;
+  right: 1rem;
+  bottom: 1.5rem;
   animation: float_msg 1.5s ease-in-out infinite, msgappear 1s ease-in-out 1;
 }
 
@@ -435,8 +474,225 @@
 
 .arrowfloat {
   animation: arrowfloat 1s ease-in-out infinite;
+  width: 2.5rem;
+  margin-top: -5rem;
 }
 
 .arrowfloat:hover {
   opacity: 0.8;
+}
+
+.header {
+  font-size: 2rem;
+  filter: drop-shadow(0px 6px 6px #dfdfdf);
+}
+
+.picofme {
+  width: 20rem;
+}
+
+.contact-socials {
+  margin-top: 5rem;
+  margin-left: 8.2rem;
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 1447px) {
+  .gmail {
+    width: 7rem;
+    margin-right: -1rem;
+  }
+  .mail {
+    width: 7rem;
+    margin-right: -1rem;
+  }
+  .inlinked-contact {
+    width: 7rem;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .gmail {
+    width: 6rem;
+    margin-right: -1rem;
+  }
+  .mail {
+    width: 6rem;
+    margin-right: -1rem;
+  }
+  .inlinked-contact {
+    width: 6rem;
+  }
+}
+
+@media screen and (max-width: 1195px) {
+  .gmail {
+    width: 5rem;
+    margin-right: -1rem;
+  }
+  .mail {
+    width: 5rem;
+    margin-right: -1rem;
+  }
+  .inlinked-contact {
+    width: 5rem;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  .gmail {
+    width: 4rem;
+    margin-right: -1.5rem;
+  }
+  .mail {
+    width: 4rem;
+    margin-right: -1.5rem;
+  }
+  .inlinked-contact {
+    width: 4rem;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .description {
+    font-size: 1.2rem;
+  }
+  .header {
+    font-size: 1.75rem;
+  }
+  .arrowfloat {
+    width: 2.2rem;
+  }
+  .moneris {
+    width: 8rem;
+  }
+  .batmobile {
+    width: 15rem;
+  }
+  .pin {
+    width: 8rem;
+  }
+  .mouse_msg {
+    width: 13rem;
+  }
+  .picofme {
+    width: 18rem;
+  }
+  .inlinked {
+    width: 7rem;
+  }
+  .github {
+    width: 7rem;
+  }
+  .youtube {
+    width: 7rem;
+  }
+  .mail {
+    width: 4rem;
+  }
+  .contact-socials {
+    margin-left: 5rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .description {
+    font-size: 1rem;
+  }
+  .header {
+    font-size: 1.5rem;
+  }
+  .mouse_msg {
+    width: 12rem;
+  }
+  .picofme {
+    width: 16rem;
+  }
+  .inlinked {
+    width: 6rem;
+  }
+  .github {
+    width: 6rem;
+  }
+  .youtube {
+    width: 6rem;
+  }
+  .mail {
+    width: 4rem;
+  }
+  .contact-socials {
+    margin-left: 3rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .contact-socials {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .description {
+    font-size: 0.8rem;
+  }
+  .header {
+    font-size: 1.3rem;
+  }
+  .moneris {
+    width: 6rem;
+  }
+  .batmobile {
+    width: 6rem;
+  }
+  .pin {
+    width: 6rem;
+  }
+  .mouse_msg {
+    width: 10rem;
+  }
+  .picofme {
+    width: 12rem;
+  }
+  .inlinked {
+    width: 5rem;
+  }
+  .github {
+    width: 5rem;
+  }
+  .youtube {
+    width: 5rem;
+  }
+  .gmail {
+    width: 2rem;
+    margin-right: -1.5rem;
+  }
+  .mail {
+    width: 2rem;
+    margin-right: -1.5rem;
+  }
+  .inlinked-contact {
+    width: 2rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .cheselogo {
+    width: 4rem;
+  }
+  .navitemshome {
+    font-size: 0.75rem;
+    margin-right: -0.65rem;
+  }
+  .navitemswork {
+    font-size: 0.75rem;
+    margin-right: -1rem;
+  }
+  .navitemsexp {
+    font-size: 0.75rem;
+    margin-right: -1.2rem;
+  }
+  .navitemscon {
+    font-size: 0.75rem;
+  }
 }
