--- a/src/styles.css
+++ b/src/styles.css
@@ -136,7 +136,6 @@
 
 .mail {
   width: 9rem;
-  margin-bottom: 1.5rem;
   animation: mailfloat 1.5s ease-in-out infinite;
 }
 
@@ -493,7 +492,7 @@
 
 .contact-socials {
   margin-top: 5rem;
-  margin-left: 8.2rem;
+  margin-left: 19.2rem;
   display: flex;
   align-items: center;
 }
@@ -603,6 +602,9 @@
   .header {
     font-size: 1.5rem;
   }
+  .batmobile {
+    width: 11rem;
+  }
   .mouse_msg {
     width: 12rem;
   }
@@ -629,6 +631,9 @@
 @media screen and (max-width: 700px) {
   .contact-socials {
     margin-left: 0;
+  }
+  .batmobile {
+    width: 9rem;
   }
 }
 
@@ -673,6 +678,9 @@
   }
   .inlinked-contact {
     width: 2rem;
+  }
+  .contact-socials {
+    margin-left: 3.5rem;
   }
 }
 
